Ignore manual test in old IEs.

--- a/tests/plugins/easyimage/manual/wordintegration.html
+++ b/tests/plugins/easyimage/manual/wordintegration.html
@@ -3,5 +3,11 @@
 </textarea>
 
 <script>
+	CKEDITOR.on( 'instanceReady', function( evt ) {
+		if ( !evt.editor.plugins.easyimage.isSupportedEnvironment() ) {
+			bender.ignore();
+		}
+	} );
+
 	CKEDITOR.replace( 'editor' );
 </script>
